# email_monitoring

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
adapters/exchange/: exchange_admin_client.py
adapters/graph/: graph_api_client.py  mime_utils.py
adapters/repository/: sql_email_repository.py
adapters/scheduling/: cron_scheduler.py
application/: main.py
application/dto/: email_dto.py  folder_dto.py  trace_dto.py
application/usecase/: fetch_and_store_metrics.py  list_folder_metrics.py
config/: logging.py  settings.py
docs/sql/: metabase_examples.md
domain/model/: email.py  metrics.py
domain/service/: email_metrics_service.py
metabase/: generate_kpis.sh  provision_dashboard.sh
metabase/questions/: kpi_1.sql  kpi_10.sql  kpi_11.sql  kpi_12.sql  kpi_13.sql  kpi_14.sql  kpi_15.sql  kpi_16.sql  kpi_17.sql  kpi_18.sql  kpi_19.sql  kpi_2.sql  kpi_20.sql  kpi_21.sql  kpi_22.sql  kpi_23.sql  kpi_24.sql  kpi_25.sql  kpi_3.sql  kpi_4.sql  kpi_5.sql  kpi_6.sql  kpi_7.sql  kpi_8.sql  kpi_9.sql
ports/: exchange_admin_client.py  graph_client.py  persistence.py  scheduler.py
