[tool.poetry]
name = "email_metrics"
version = "1.0.0"
description = "Ferramenta para coletar métricas de e-mail via Microsoft Graph API"
authors = ["PavCob"]
readme = ["README.md"]

[tool.poetry.dependencies]
python = "^3.13.3"
schedule = "^1.2.2"
requests = "^2.32.4"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
structlog = "^25.4.0"

